small updates for testing folder