@@ -13,6 +13,13 @@ public class Day1 {
 
     public static void main(String[] args){
 
+        /*
+        the calibration value can be found by combining
+        the first digit and the last digit (in that order)
+        to form a single two-digit number.
+         */
+
+
         Scanner scan = null;
         File data = new File ("submissions/at/ac/uibk/pm/g03/csbb5525/exercisetesting/adventofcode/day01/input");
 
@@ -32,25 +39,47 @@ public class Day1 {
             //testing:
             //System.out.println(scan.nextLine());
 
+
             String temp = scan.nextLine();
 
 
             List<Character> characterList = temp.chars().mapToObj(c-> (char) c).toList();
 
-            characterList.forEach(System.out::print);
-            System.out.println();
+            //characterList.forEach(System.out::print);
+            //System.out.println();
 
-           //List<Integer> integerList =
+            List<Character> charactersListdigits =
                    characterList.stream()
-                                        .filter(c -> Character.isDigit(c)).forEach(System.out::print);
-                                        //.mapToInt( i -> (int) i)
-                                        //.boxed().collect(Collectors.toList());
+                                .filter(c -> Character.isDigit(c))
+                                .toList();
 
-           //integerList.forEach(System.out::println);
+                                //.forEach( (c) -> {
+                                //    System.out.println(c);
+                                //    //System.out.println(c.getClass());
+                                //});
+                                //.mapToInt( i -> (int) i)
+                                //.boxed().collect(Collectors.toList());
+
+                                //.map( c -> (int) c)//todo: something goes wrong here!
+                                //.toList();
+
+
+            //integerList.forEach(System.out::println);
 
 
                             //.mapToInt(i -> (int) i)
                             //.collect(Collectors.toList());
+
+            charactersListdigits.forEach( i -> {
+                System.out.println(i);
+                System.out.println(i.getClass());
+            });
+
+            int count = charactersListdigits.size();
+
+            switch(count) {
+                case 0 -> System.out.println();//continue;
+            }
 
 
         //}
